# evilpoison

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  client.c  doxygen.config  events.c  evilwm.h  example.evilpoisonrc  keymap.h  main.c  misc.c  new.c  screen.c  settings.make
doc/: EvilWM_Changelog  INSTALL  README  example.evilpoisonrc
src/: CMakeLists.txt  GNUmakefile  bind.c  bind.h  client.c  command.c  command.h  commandline.c  commandline.h  dictionary.c  dictionary.h  events.c  evilpoison.h  evilpoison_commands.c  evilpoison_commands.h  ewmh.c  keymap.h  log.h  main.c  misc.c  new.c  screen.c  settings.c  settings.h  xinerama.c  xinerama.h
tests/: CMakeLists.txt  GNUmakefile  check_bind.c  check_bind.h  check_command.c  check_command.h  check_dictionary.c  check_dictionary.h  check_settings.c  check_settings.h  tests.c
